# Mandelbrot-Set

./: .gitignore  CMakeLists.txt  README.md  display.py  mandelbrot-serial.c  parallel  parallel.c  serial  serial.c
